[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jittor"
version = "1.3.11.0"
description = "a Just-in-time(JIT) deep learning framework"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Jittor Group", email = "ran.donglang@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = ["numpy<2.0", "tqdm", "pillow", "astunparse"]

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"*" = ["*", "*/*", "*/*/*", "*/*/*/*", "*/*/*/*/*", "*/*/*/*/*/*"]

# [tool.setuptools.dynamic]
# version = { attr = "jittor.__version__" }
